plugins/binding/capi/include/TellusimCMath.h

TS_CAPI TSVector4f* TS_CCALL tsVector4f_abs(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_neg(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_neg(TSVector4d *ret, const TSVector4d *v);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_mul1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_mul1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_mul1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_div1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_div1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_div1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_add1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_add1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_add1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_sub1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_sub1(TSVector4f *ret, const TSVector4f *v0, float32_t v1);
TS_CAPI TSVector4d* TS_CCALL tsVector4d_sub1(TSVector4d *ret, const TSVector4d *v0, float64_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_and1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_or1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_xor1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_shl1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_shr1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_mul(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_mul(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_div(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_div(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_add(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_add(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_sub(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_sub(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_and(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_or(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_xor(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_min(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_min(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_max(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_max(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_clamp(TSVector4u *ret, const TSVector4u *v, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_clamp(TSVector4f *ret, const TSVector4f *v, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_saturate(TSVector4f *ret, const TSVector4f *v);
TS_CAPI float32_t TS_CCALL tsVector4f_dot(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_dot33(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_dot43(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_dot34(const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_cross(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1);
TS_CAPI float32_t TS_CCALL tsVector4f_length(const TSVector4f *v);
TS_CAPI float32_t TS_CCALL tsVector4f_length3(const TSVector4f *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_normalize(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_normalize3(TSVector4f *ret, const TSVector4f *v);
TS_CAPI TSVector4f* TS_CCALL tsVector4f_lerp(TSVector4f *ret, const TSVector4f *v0, const TSVector4f *v1, float32_t k);