plugins/binding/csharp/source/TellusimCSMath.cs

		
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_mul1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_div1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_add1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_sub1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_and1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_or1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_xor1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_shl1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_shr1(ref Vector4u ret, in Vector4u v0, uint v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_mul(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_div(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_add(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_sub(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_and(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_or(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_xor(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_min(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_max(ref Vector4u ret, in Vector4u v0, in Vector4u v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4u_clamp(ref Vector4u ret, in Vector4u v, in Vector4u v0, in Vector4u v1);
		
		public static readonly Vector4u zero = new Vector4u(0);
		public static readonly Vector4u oneX = new Vector4u(1, 0, 0, 0);
		public static readonly Vector4u oneY = new Vector4u(0, 1, 0, 0);
		public static readonly Vector4u oneZ = new Vector4u(0, 0, 1, 0);
		public static readonly Vector4u oneW = new Vector4u(0, 0, 0, 1);
		public static readonly Vector4u one = new Vector4u(1);
		
		public uint x, y, z, w;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential, Pack=16)]
	public struct Vector4f {
		
		public Vector4f(float v) { x = v; y = v; z = v; w = v; }
		public Vector4f(float x, float y, float z, float w) { this.x = x; this.y = y; this.z = z; this.w = w; }
		public Vector4f(in Vector2f v, float z, float w) { x = v.x; y = v.y; this.z = z; this.w = w; }
		public Vector4f(in Vector3f v, float w) { x = v.x; y = v.y; z = v.z; this.w = w; }
		public Vector4f(in Vector4f v) { x = v.x; y = v.y; z = v.z; w = v.w; }
		public Vector4f(in Vector4i v) { x = (float)v.x; y = (float)v.y; z = (float)v.z; w = (float)v.w; }
		public Vector4f(in Vector4u v) { x = (float)v.x; y = (float)v.y; z = (float)v.z; w = (float)v.w; }
		public Vector4f(in Vector4d v) { x = (float)v.x; y = (float)v.y; z = (float)v.z; w = (float)v.w; }
		public Vector4f(in float[] v) { x = v[0]; y = v[1]; z = v[2]; w = v[3]; }
		
		public static Vector4f operator-(in Vector4f v) { Vector4f ret = new Vector4f(); tsVector4f_neg(ref ret, in v); return ret; }
		
		public static Vector4f operator*(in Vector4f v0, float v1) { Vector4f ret = new Vector4f(); tsVector4f_mul1(ref ret, in v0, v1); return ret; }
		public static Vector4f operator/(in Vector4f v0, float v1) { Vector4f ret = new Vector4f(); tsVector4f_div1(ref ret, in v0, v1); return ret; }
		public static Vector4f operator+(in Vector4f v0, float v1) { Vector4f ret = new Vector4f(); tsVector4f_add1(ref ret, in v0, v1); return ret; }
		public static Vector4f operator-(in Vector4f v0, float v1) { Vector4f ret = new Vector4f(); tsVector4f_sub1(ref ret, in v0, v1); return ret; }
		
		public static Vector4f operator*(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_mul(ref ret, in v0, in v1); return ret; }
		public static Vector4f operator/(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_div(ref ret, in v0, in v1); return ret; }
		public static Vector4f operator+(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_add(ref ret, in v0, in v1); return ret; }
		public static Vector4f operator-(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_sub(ref ret, in v0, in v1); return ret; }
		
		public Vector4f abs() { Vector4f ret = new Vector4f(); tsVector4f_abs(ref ret, in this); return ret; }
		
		public static Vector4f min(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_min(ref ret, in v0, in v1); return ret; }
		public static Vector4f max(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_max(ref ret, in v0, in v1); return ret; }
		
		public Vector4f clamp(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_clamp(ref ret, in this, in v0, in v1); return ret; }
		public Vector4f saturate() { Vector4f ret = new Vector4f(); tsVector4f_saturate(ref ret, in this); return ret; }
		
		public static float dot(in Vector4f v0, in Vector4f v1) { return tsVector4f_dot(in v0, in v1); }
		public static float dot33(in Vector4f v0, in Vector4f v1) { return tsVector4f_dot33(in v0, in v1); }
		public static float dot43(in Vector4f v0, in Vector4f v1) { return tsVector4f_dot43(in v0, in v1); }
		public static float dot34(in Vector4f v0, in Vector4f v1) { return tsVector4f_dot34(in v0, in v1); }
		public static Vector4f cross(in Vector4f v0, in Vector4f v1) { Vector4f ret = new Vector4f(); tsVector4f_cross(ref ret, in v0, in v1); return ret; }
		
		public float length() { return tsVector4f_length(in this); }
		public float length3() { return tsVector4f_length3(in this); }
		public Vector4f normalize() { Vector4f ret = new Vector4f(); tsVector4f_normalize(ref ret, in this); return ret; }
		public Vector4f normalize3() { Vector4f ret = new Vector4f(); tsVector4f_normalize3(ref ret, in this); return ret; }
		
		public static Vector4f lerp(in Vector4f v0, in Vector4f v1, float k) { Vector4f ret = new Vector4f(); tsVector4f_lerp(ref ret, in v0, in v1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2} {3})", x, y, z, w); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_abs(ref Vector4f ret, in Vector4f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_neg(ref Vector4f ret, in Vector4f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_mul1(ref Vector4f ret, in Vector4f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_div1(ref Vector4f ret, in Vector4f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_add1(ref Vector4f ret, in Vector4f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_sub1(ref Vector4f ret, in Vector4f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_mul(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_div(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_add(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_sub(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_min(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_max(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_clamp(ref Vector4f ret, in Vector4f v, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_saturate(ref Vector4f ret, in Vector4f v);
		[DllImport(Base.Import)] private static extern float tsVector4f_dot(in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern float tsVector4f_dot33(in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern float tsVector4f_dot43(in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern float tsVector4f_dot34(in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_cross(ref Vector4f ret, in Vector4f v0, in Vector4f v1);
		[DllImport(Base.Import)] private static extern float tsVector4f_length(in Vector4f v);
		[DllImport(Base.Import)] private static extern float tsVector4f_length3(in Vector4f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_normalize(ref Vector4f ret, in Vector4f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_normalize3(ref Vector4f ret, in Vector4f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4f_lerp(ref Vector4f ret, in Vector4f v0, in Vector4f v1, float k);
		
		public static readonly Vector4f zero = new Vector4f(0.0f);
		public static readonly Vector4f oneX = new Vector4f(1.0f, 0.0f, 0.0f, 0.0f);
		public static readonly Vector4f oneY = new Vector4f(0.0f, 1.0f, 0.0f, 0.0f);
		public static readonly Vector4f oneZ = new Vector4f(0.0f, 0.0f, 1.0f, 0.0f);
		public static readonly Vector4f oneW = new Vector4f(0.0f, 0.0f, 0.0f, 1.0f);
		public static readonly Vector4f one = new Vector4f(1.0f);
		
		public float x, y, z, w;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential, Pack=16)]
	public struct Vector4d {
		
		public Vector4d(double v) { x = v; y = v; z = v; w = v; }
		public Vector4d(double x, double y, double z, double w) { this.x = x; this.y = y; this.z = z; this.w = w; }
		public Vector4d(in Vector2d v, double z, double w) { x = v.x; y = v.y; this.z = z; this.w = w; }
		public Vector4d(in Vector3d v, double w) { x = v.x; y = v.y; z = v.z; this.w = w; }
		public Vector4d(in Vector4d v) { x = v.x; y = v.y; z = v.z; w = v.w; }
		public Vector4d(in Vector4i v) { x = (double)v.x; y = (double)v.y; z = (double)v.z; w = (double)v.w; }
		public Vector4d(in Vector4u v) { x = (double)v.x; y = (double)v.y; z = (double)v.z; w = (double)v.w; }
		public Vector4d(in Vector4f v) { x = (double)v.x; y = (double)v.y; z = (double)v.z; w = (double)v.w; }
		public Vector4d(in double[] v) { x = v[0]; y = v[1]; z = v[2]; w = v[3]; }
		
		public static Vector4d operator-(in Vector4d v) { Vector4d ret = new Vector4d(); tsVector4d_neg(ref ret, in v); return ret; }
		
		public static Vector4d operator*(in Vector4d v0, double v1) { Vector4d ret = new Vector4d(); tsVector4d_mul1(ref ret, in v0, v1); return ret; }
		public static Vector4d operator/(in Vector4d v0, double v1) { Vector4d ret = new Vector4d(); tsVector4d_div1(ref ret, in v0, v1); return ret; }
		public static Vector4d operator+(in Vector4d v0, double v1) { Vector4d ret = new Vector4d(); tsVector4d_add1(ref ret, in v0, v1); return ret; }
		public static Vector4d operator-(in Vector4d v0, double v1) { Vector4d ret = new Vector4d(); tsVector4d_sub1(ref ret, in v0, v1); return ret; }
